<resources>
    <string name="app_name">warrantytrackerapp</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login2">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="register2">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>