<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/img"
    android:gravity="center">

    <TextView
        android:text="@string/login2"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <EditText
        android:id="@+id/loginEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/loginPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/goToRegister"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#1976D2"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
</LinearLayout>
