<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/img">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <TextView
            android:text="@string/register"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/registerName"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/registerEmail"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/registerButton"
            android:text="@string/register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#388E3C"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/goToLogin"
            android:text="@string/already_have_an_account_login"
            android:textColor="#1976D2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
